# opengl_vscode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
opengl_test/opengl_test/: main.cpp
opengl_test/opengl_test.xcodeproj/: project.pbxproj
src/: common.c  glad.c  main.cpp
